# pymasq

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pymasq.classifiers.html  pymasq.datasets.html  pymasq.errors.html  pymasq.html  pymasq.kve.html  pymasq.metrics.html  pymasq.mitigations.html  pymasq.optimizations.html  pymasq.plotting.html  pymasq.preprocessing.html  pymasq.sa.html  pymasq.utils.html  readme.html  readme_link.html  search.html  searchindex.js  setup.cfg
.github/workflows/: python-package.yml  python-publish.yml
_sources/: modules.rst.txt  pymasq.classifiers.rst.txt  pymasq.datasets.rst.txt  pymasq.kve.rst.txt  pymasq.metrics.rst.txt  pymasq.mitigations.rst.txt  pymasq.optimizations.rst.txt  pymasq.plotting.rst.txt  pymasq.preprocessing.rst.txt  pymasq.rst.txt  pymasq.sa.rst.txt
docs/: README.md  update_docs.sh
docs/source/: conf.py  index.rst  modules.rst  pymasq.errors.rst  pymasq.utils.rst
html/: .buildinfo  py-modindex.html  pymasq.datasets.html  pymasq.errors.html  pymasq.html  pymasq.kve.html  pymasq.metrics.html  pymasq.mitigations.html  pymasq.optimizations.html  pymasq.sa.html  searchindex.js
html/_sources/: readme.rst.txt
src/pymasq/: Jenkinsfile  README.md  __init__.py  config.py
src/pymasq/datasets/: __init__.py  _base.py  data_generator.py  utils.py
src/pymasq/datasets/data/: bank-attrition-rates.csv  census.csv  shuffled.csv  y_star.csv  y_star1.csv
src/pymasq/errors/: __init__.py
src/pymasq/kve/: __init__.py  kve.py
src/pymasq/metrics/: __init__.py  auc_scores.py  risk_scores.py  suda.py  utility_scores.py  utils.py
src/pymasq/mitigations/: __init__.py  add_noise.py  geom_transform.py  global_recode.py  hashing.py  local_supp.py  microaggregation.py  pram.py  rank_swap.py  rounding.py  shuffle.py  substitute.py  topbot_recoding.py  truncate.py  utils.py
src/pymasq/models/: __init__.py  _base.py  models.py
src/pymasq/optimizations/: __init__.py  _base.py  optimizations.py  utils.py
src/pymasq/plotting/: __init__.py  plots.py
src/pymasq/preprocessing/: __init__.py  _base.py  entity_embedding.py  preprocess.py
src/pymasq/sa/: __init__.py  sobol.py
src/pymasq/utils/: cache.py  utils.py
tests/: README.md
tests/classifiers/: test_classifiers.py
tests/integration/: README.md  core_config.yaml  integration.py  template_config.yaml  test_config.yaml
tests/kve/: test_kve.py
tests/metrics/: test_risk_scores.py  test_utility_scores.py
tests/mitigations/: test_add_noise.py  test_geom_transforms.py  test_global_recode.py  test_hashing.py  test_local_supp.py  test_microaggregation.py  test_pram.py  test_shuffle.py  test_substitute.py  test_topbot.py  test_truncate.py
tests/optimizations/: test_optimizations.py  test_utils.py
tests/preprocessing/: test_preprocess.py
tests/sa/: test_sa.py
tests/utils/: test_cache.py
vignettes/: README.md
vignettes/bank-attrition-rates/: auto-mod-bank-attrition-rates.csv  data-analysis.ipynb  manual-mod-bank-attrition-rates.csv  opt-parameters.yaml  sdc-analysis-manual.ipynb
