# General metadata
[metadata]
name = pymasq
version = attr: pymasq.__version__
license = LICENSE.txt
summary = Mitigation Assessment and Application for Statistical Disclosure Control
description-file = README.md
long_description_content_type = text/markdown
author = Cuyler OBrien, Jaime Peña, Evan Young, Brian Levine, Eric Wybenga
author_email = cuyler.obrien@ll.mit.edu, jdpena@ll.mit.edu, evan.young@ll.mit.edu
url = https://github.com/mit-ll/pymasq
project_urls =
	Documentation = https://mit-ll.github.io/pymasq/
keywords =
    sdc, privacy, anonymization, data, automation, perturbation, generalization, suppression, optimization

[options]
python_requires = >= 3.8
packages = find:
package_dir =
       = src
install_requires =
       boruta>=0.3
       bpemb>=0.3.3
       matplotlib>=3.4.2
       numpy>=1.19.3
       pandas>=1.1.3
       plotly>=4.11.0
       scikit-learn>=0.23
       scipy>=1.5.4
       statsmodels>=0.12
       SALib>=1.4.5
       tensorflow>=2.4.0
       tpot[dask]>=0.11
tests_require = 
       pytest>=3.8
       hypothesis>=4.53.2
       beartype>=0.5.1

[options.packages.find]
where = src
exclude = tests, tests.*

# pytest settings
[tool:pytest]
python_files=test_*.py
testpaths=tests

[tox:tox]
envlist = py38, py39, coverage, bandit, owasp-depcheck
toxworkdir = build/tox

[testenv]
setenv = HYPOTHESIS_PROFILE=ci
deps = pytest
       hypothesis
commands = pytest tests --junitxml={toxworkdir}/xunit-tests-{envname}.xml -o junit_suite_name=pytest-{envname}

[testenv:coverage]
usedevelop = true
basepython = python3.8
deps = {[testenv]deps}
       coverage
       pytest-cov
commands = pytest --cov-report xml:{toxworkdir}/xunit-coverage.xml --cov-config=setup.cfg --cov=pymasq tests -o junit_suite_name=pytest-{envname}

[testenv:localcoverage]
usedevelop = true
basepython = python3.8
deps = {[testenv]deps}
       coverage
       pytest-cov
commands = pytest --cov-report term-missing --cov-config=setup.cfg --cov=pymasq tests

[testenv:bandit]
basepython = python3.8
deps = bandit
commands = bandit -f json -o {toxworkdir}/security-bandit.json -r {envsitepackagesdir}/pymasq

[testenv:owasp-depcheck]
basepython = python3.8
