# General metadata
[metadata]
name = pymasq
version = attr: pymasq.__version__
license = LICENSE.txt
summary = Mitigation Assessment and Application for Statistical Disclosure Control
description-file = README.md
long_description_content_type = text/markdown
author = Cuyler OBrien, Jaime Peña, Evan Young, Brian Levine, Eric Wybenga
author_email = cuyler.obrien@ll.mit.edu, jdpena@ll.mit.edu, evan.young@ll.mit.edu
url = https://github.com/mit-ll/pymasq
project_urls =
	Documentation = https://mit-ll.github.io/pymasq/
keywords =
    sdc, privacy, anonymization, data, automation, perturbation, generalization, suppression, optimization

[options]
python_requires = >= 3.10
packages = find:
package_dir =
       = src
install_requires =
       bpemb~=0.3
       matplotlib~=3.5
       numpy~=1.26
       pandas~=1.4
       plotly>=4.11.0
       SALib~=1.4
       scikit-learn~=1.1
       scipy~=1.8
       statsmodels~=0.13
       tensorflow~=2.9
       tpot[dask]~=0.11
tests_require = 
       beartype>=0.5.1  
       pytest~=7.4

[options.packages.find]
where = src
exclude = tests, tests.*

# pytest settings
[tool:pytest]
python_files=test_*.py
testpaths=tests

[tox:tox]
envlist = py3{10,11}, coverage, bandit, owasp-depcheck
toxworkdir = build/tox

[testenv]
setenv = HYPOTHESIS_PROFILE=ci
deps = pytest
       hypothesis
commands = pytest tests --junitxml={toxworkdir}/xunit-tests-{envname}.xml -o junit_suite_name=pytest-{envname}

[testenv:coverage]
usedevelop = true
basepython = python3.10
deps = {[testenv]deps}
       coverage
       pytest-cov
commands = pytest --cov-report xml:{toxworkdir}/xunit-coverage.xml --cov-config=setup.cfg --cov=pymasq tests -o junit_suite_name=pytest-{envname}

[testenv:localcoverage]
usedevelop = true
basepython = python3.10
deps = {[testenv]deps}
       coverage
       pytest-cov
commands = pytest --cov-report term-missing --cov-config=setup.cfg --cov=pymasq tests

[testenv:bandit]
basepython = python3.10
deps = bandit
commands = bandit -f json -o {toxworkdir}/security-bandit.json -r {envsitepackagesdir}/pymasq

[testenv:owasp-depcheck]
basepython = python3.10
